--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,21 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body {
+  transition-property: opacity, transform, filter, background;
+  transition-timing-function: ease-in-out;
+  transition-duration: 500ms;
+}
+
+.page-transition {
+  opacity: 0;
+  background: #03043b;
+  transform: translateY(40px);
+  filter: blur(12px);
+  -webkit-transform: translateY(40px);
+  -moz-transform: translateY(40px);
+  -ms-transform: translateY(40px);
+  -o-transform: translateY(40px);
+  overflow: hidden;
+}
