--- a/app/dashboard/globals.css
+++ b/app/dashboard/globals.css
@@ -24,11 +24,11 @@ label {
 
 input,
 select {
-    @apply w-[300px] outline-none bg-whiteColor text-black font-medium duration-700 p-2 rounded-tl-xl rounded-br-xl focus:border focus:border-green-500
+    @apply w-[300px] outline-none bg-mainColor border-whiteColor border-2 text-black font-medium duration-700 p-2 rounded-tl-xl rounded-br-xl focus:border-2 focus:border-green-500
 }
 
 textarea {
-        @apply w-full h-[150px] outline-none bg-whiteColor text-black font-medium duration-700 p-2 rounded-tl-xl rounded-br-xl focus:border focus:border-green-500
+        @apply w-full h-[150px] outline-none bg-mainColor border-whiteColor border-2 text-black font-medium duration-700 p-2 rounded-tl-xl rounded-br-xl focus:border-2 focus:border-green-500
 
 }
 
@@ -37,7 +37,7 @@ textarea {
 }
 
 .btnDelete {
-    @apply w-[300px] bg-red-500 text-whiteColor my-6 text-lg text-center font-medium p-2 rounded-tl-xl rounded-br-xl duration-700 hover:bg-red-600
+    @apply w-[300px] bg-red-500 text-mainColor my-6 text-lg text-center font-medium p-2 rounded-tl-xl rounded-br-xl duration-700 hover:bg-red-600
 }
 
 td,
@@ -47,5 +47,6 @@ th {
 }
 
 table thead {
-    background-color: azure;
+    background-color: #1d1a73;
+    color: #FFF7FC;
 }
