--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   transition-property: opacity, transform, filter, background;
@@ -20,4 +23,12 @@ body {
   -ms-transform: translateY(40px);
   -o-transform: translateY(40px);
   overflow: hidden;
+}
+
+.ground-trans {
+  background: linear-gradient(
+    0deg,
+    rgba(254, 254, 254, 1) 0%,
+    rgba(254, 254, 254, 0) 100%
+  );
 }
