--- a/app/globals.css
+++ b/app/globals.css
@@ -32,3 +32,40 @@ body {
     rgba(254, 254, 254, 0) 100%
   );
 }
+
+.iconInModel::after {
+  content: ' ';
+  position: absolute;
+  bottom: -20px;
+  height: 20px;
+  width: 0.5px;
+  background-color: rgb(35, 34, 40);
+}
+
+.iconInModel::before {
+  content: '';
+  position: absolute;
+  bottom: -20px;
+  height: 5px;
+  width: 5px;
+  border-radius: 50%;
+  background-color: rgb(35, 34, 40);
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+input,
+select {
+    @apply w-full min-w-[300px] outline-none bg-mainColor border-whiteColor border-2 text-black font-medium duration-700 p-2 rounded-tl-xl rounded-br-xl focus:border-2 focus:border-green-500
+}
+
+textarea {
+        @apply w-full h-[150px] outline-none bg-mainColor border-whiteColor border-2 text-black font-medium duration-700 p-2 rounded-tl-xl rounded-br-xl focus:border-2 focus:border-green-500
+
+}
+
+.btnForm {
+    @apply w-[300px] bg-whiteColor text-mainColor my-6 text-lg text-center font-medium p-2 rounded-tl-xl rounded-br-xl duration-700 hover:bg-green-400
+}
