--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,7 +12,6 @@ body {
   transition-timing-function: ease-in-out;
   transition-duration: 500ms;
 }
-
 
 /* Start Scroll bar */
 ::-webkit-scrollbar {
@@ -30,7 +29,6 @@ body {
 ::-webkit-scrollbar-corner {
   background-color: #1d1a73;
 }
-
 
 .page-transition {
   opacity: 0;
@@ -53,7 +51,7 @@ body {
 }
 
 .iconInModel::after {
-  content: ' ';
+  content: " ";
   position: absolute;
   bottom: -20px;
   height: 20px;
@@ -62,7 +60,7 @@ body {
 }
 
 .iconInModel::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -20px;
   height: 5px;
@@ -77,14 +75,13 @@ body {
 
 input,
 select {
-    @apply w-full min-w-[300px] outline-none bg-mainColor border-whiteColor border-2 text-black font-medium duration-700 p-2 rounded-tl-xl rounded-br-xl focus:border-2 focus:border-green-500
+  @apply w-full min-w-[300px] outline-none bg-mainColor border-whiteColor border-2 text-black font-medium duration-700 p-2 rounded-tl-xl rounded-br-xl focus:border-2 focus:border-green-500;
 }
 
 textarea {
-        @apply w-full h-[150px] outline-none bg-mainColor border-whiteColor border-2 text-black font-medium duration-700 p-2 rounded-tl-xl rounded-br-xl focus:border-2 focus:border-green-500
-
+  @apply w-full h-[150px] outline-none bg-mainColor border-whiteColor border-2 text-black font-medium duration-700 p-2 rounded-tl-xl rounded-br-xl focus:border-2 focus:border-green-500;
 }
 
 .btnForm {
-    @apply w-[300px] bg-whiteColor text-mainColor my-6 text-lg text-center font-medium p-2 rounded-tl-xl rounded-br-xl duration-700 hover:bg-green-400
+  @apply w-[300px] bg-whiteColor text-mainColor my-6 text-lg text-center font-medium p-2 rounded-tl-xl rounded-br-xl duration-700 hover:bg-green-400;
 }
